# verbose-octo-tribble

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
.github/workflows/: cmake.yml
src/core/: application.hpp  entry_point.hpp  platform.cpp  platform.hpp  uuid.cpp  uuid.hpp
src/editor/: editor.cpp  editor.hpp  inspector_panel.cpp  inspector_panel.hpp  panel.cpp  panel.hpp  viewport_panel.cpp  viewport_panel.hpp  world_outliner_panel.cpp  world_outliner_panel.hpp
src/platform/glfw/: glfw_platform.cpp  glfw_platform.hpp
src/scene/: components.hpp  scene_system.cpp  scene_system.hpp
